# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bug.md  compile_api.cpp  compile_api.hpp  exp_result  imgui.ini  input.hpp  main.cpp  makefile  readme.md  run_ouput  tmp
.cache/clangd/index/: absyn.h.ADEA35FE269206A2.idx  compile_api.cpp.1E81B5113E329A44.idx  compile_api.hpp.F2F06C1966387339.idx  errormsg.h.6F1E27491D3E57AF.idx  globalVarTable.h.2127F2DA5762F065.idx  imconfig.h.EDD3785150EBAAE4.idx  imgui.cpp.3025EF9ED617B95E.idx  imgui.h.9B580937E7C42B4D.idx  imgui_demo.cpp.8178B5F7519EF215.idx  imgui_draw.cpp.53314702583CB6B9.idx  imgui_impl_glfw.cpp.5EE21DAD082787E3.idx  imgui_impl_glfw.h.1CE5A9B6E122C830.idx  imgui_impl_vulkan.cpp.98E103E4550EA286.idx  imgui_impl_vulkan.h.46050BCFB7FC2DE3.idx  imgui_internal.h.F40946B1187A108A.idx  imgui_tables.cpp.2D39D955A249D3D3.idx  imgui_widgets.cpp.F4CFF2B39B643B04.idx  imstb_rectpack.h.D2C9C7F305515E7C.idx  imstb_textedit.h.572CC02279EBF3B2.idx  imstb_truetype.h.27CCCD2521875EE1.idx  input.hpp.151087960B2485AA.idx  main.cpp.CA9560741AC5741E.idx  parse.h.D85FF2D4706A3A67.idx  parseAST.h.19BA014E287311A8.idx  prabsyn.h.FA0190A00A20268F.idx  symbol.h.65278E71757903FD.idx  table.h.A4DE6E18179B1F9D.idx  util.h.05A9F79985CEA62C.idx
imGUI/backends/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
